# bsol-backend/bsol-backend-impl/src/main/java/com/uv/app/controller/AuthController.java
@@ -3,10 +3,13 @@ package com.uv.app.controller;
 
 import com.uv.app.service.AuthService;
 import com.uv.security.generated.app.api.AuthApiController;
+import com.uv.security.generated.app.model.LoginResponse;
 import com.uv.security.generated.app.model.MessageResponse;
+import com.uv.security.generated.app.model.RegisterRequest;
 import com.uv.security.generated.app.model.RequestRegistrationOtpRequest;
-import com.uv.security.generated.app.model.VerifyRegistrationOtpRequest;
+import jakarta.validation.Valid;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.NativeWebRequest;
@@ -14,39 +17,46 @@ import org.springframework.web.context.request.NativeWebRequest;
 @Slf4j
 @RestController
 public class AuthController extends AuthApiController {
+
     private final AuthService authService;
 
-    public AuthController(NativeWebRequest request, AuthService authService) {
+    public AuthController(
+            NativeWebRequest request,
+            AuthService authService) {
         super(request);
         this.authService = authService;
     }
 
     @Override
-    public ResponseEntity<MessageResponse> requestRegistrationOtp(RequestRegistrationOtpRequest requestRegistrationOtpRequest) {
-        log.info("Registration OTP requested for email: {}", requestRegistrationOtpRequest.getEmail());
+    public ResponseEntity<MessageResponse> requestRegistrationOtp(
+            @Valid RequestRegistrationOtpRequest request) {
 
-        String message = authService.sendOtp(
-                requestRegistrationOtpRequest.getEmail()
-        );
+        log.info("Registration OTP requested for email: {}", request.getEmail());
+        String message = authService.sendOtp(request.getEmail());
         return ResponseEntity.ok(new MessageResponse(message));
     }
 
     @Override
-    public ResponseEntity<MessageResponse> resendRegistrationOtp(RequestRegistrationOtpRequest requestRegistrationOtpRequest) {
-        log.info("Resend OTP requested for email: {}", requestRegistrationOtpRequest.getEmail());
-        String message = authService.sendOtp(
-                requestRegistrationOtpRequest.getEmail()
-        );
+    public ResponseEntity<MessageResponse> resendRegistrationOtp(
+            @Valid RequestRegistrationOtpRequest request) {
+
+        log.info("Resend OTP requested for email: {}", request.getEmail());
+        String message = authService.sendOtp(request.getEmail());
         return ResponseEntity.ok(new MessageResponse(message));
     }
 
     @Override
-    public ResponseEntity<MessageResponse> verifyRegistrationOtp(VerifyRegistrationOtpRequest verifyRegistrationOtpRequest) {
-        log.info("Verify OTP requested for email: {}", verifyRegistrationOtpRequest.getEmail());
-        String message = authService.verifyOtp(
-                verifyRegistrationOtpRequest.getEmail(), verifyRegistrationOtpRequest.getOtp()
-        );
-        return ResponseEntity.ok(new MessageResponse(message));
-    }
+    public ResponseEntity<LoginResponse> register(
+            @Valid RegisterRequest request) {
 
+        LoginResponse response = authService.registerUser(
+                request.getName(),
+                request.getEmail(),
+                request.getPassword(),
+                request.getOtp()
+        );
+        return ResponseEntity
+                .status(HttpStatus.CREATED)
+                .body(response);
+    }
 }
